# near

./: .env.dispatcher  .gitignore  README.md
contracts/rtav2/: Cargo.toml
contracts/rtav2/src/: lib.rs
workers/: .gitignore  DEPLOYMENT_READY.md  README.md  build.sh  docker-compose.phala.yaml  docker-compose.yaml  endpoints.md
workers-index/chunker/: index.js
workers-index/dispatcher/: index.js
workers/chunker/: .dockerignore  .gitignore  Dockerfile  README.md  app.json  docker-compose.yaml  package-lock.json  package.json  server.js
workers/chunker/contract/: Cargo.toml
workers/chunker/contract/src/: collateral.rs  ecdsa.rs  lib.rs
workers/chunker/pages/: index.js
workers/chunker/pages/api/: testVRF.js
workers/chunker/utils/: README.md  near-provider.js
workers/dispatcher/: .gitignore  Dockerfile  app.json  docker-compose.yaml  next.config.js  package-lock.json  package.json  server.js  setup-worker.js  test-dispatcher.js
workers/dispatcher/components/: Overlay.js
workers/dispatcher/contract/: Cargo.toml
workers/dispatcher/contract/src/: collateral.rs  lib.rs
workers/dispatcher/pages/: index.js
workers/dispatcher/pages/api/: downloadFile.js  getStorageMetrics.js  getUploadStatus.js  getWorkerAccount.js  register.js  sendTransaction.js  testDispatch.js  testUpload.js  uploadFile.js
workers/dispatcher/styles/: Home.module.css
workers/dispatcher/utils/: deploy-contract.js  near-provider.js  storage-service.js  synapseSDK.js  worker-registration.js
