[package]
name = "contract"
description = "Real-time VRF raffling for audio co-ownership"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vibesflow/near/workers/chunker"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.4"
borsh = "1.5"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }
near-workspaces = { version = "0.14.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
