[package]
name = "v1dispatcher"
description = "VibesFlow Dispatcher Shade Agent Contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.7.0", features = ["schemars"]}
schemars = { version = "0.8" }
serde_json = "1.0.135"
base64 = "0.22.1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
serde = "1.0.217"


dcap-qvl = { git = "https://github.com/mattlockyer/dcap-qvl" }

# rustls-webpki = {git = "https://github.com/mattlockyer/webpki", default-features = false, features=[
#    "near-wasm",
# ]}

[dev-dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.7.1-rust-1.80.0"
dockerfile = "Dockerfile"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
